python/testData/highlighting/fStringTerminatedByQuoteInNestedLiteralPartBefore312.py
s = f'foo{f"baz<error descr="Python version 3.11 does not allow nesting of string literals with the same quote type inside f-strings">'</error>quux"}bar'